Wed May 11 15:58:39 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (break_jump): break should not cross functions.
	  [ruby-list:40818]

Wed May 11 10:41:54 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): fixed typo.

Wed May 11 01:03:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (TMP_ALLOC): use macro NEW_NODE() to get rid of warnings on
	  platforms which have no alloca().  fixed: [ruby-talk:141301]

Sun May  8 23:17:47 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb: fix typo.

Sun May  8 21:00:50 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* hash.c (Init_Hash): remove custom "hash" and "eql?".
	  (ported from 1.8) [ruby-dev:26132]

Sun May  8 16:50:25 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/profiler.rb: fixed "undefined method `[]' for nil:NilClass"
	  [ruby-core:4775] [ruby-talk:140401] [ruby-dev:26118]

Sat May  7 22:58:00 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_var): no libs argument is given.

Fri May  6 08:08:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c:rb_hash_hash_i() should be static.  [ruby-core:04815]

	* re.c should include regint.h for declarations of oniguruma
	  functions.  [ruby-core:04815]

Sun May  1 09:15:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_sflag): replace '-' in variable names with '_'.
	  [ruby-dev:26107]

	* eval.c (rb_eval), parse.y (arg): reduce fixnum range literal at
	  parser.  fixed: [ruby-dev:26113]

Sat Apr 30 11:59:25 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_FUNC_ATTRIBUTE): check for function attribute.
	  [ruby-dev:26109]

	* eval.c, gc.c: moved noinline to configure.in.

	* rubyio.h (DEPRECATED): moved to configure.in.

	* ruby.h (DEPRECATED, NOINLINE): default definition.

	* win{32,ce}/Makefile.sub (config.h): deprecated and noinline for
	  __declspec() are available for VC++7 or later.
